--- a/_config/site.yml
+++ b/_config/site.yml
@@ -1,11 +1,11 @@
 # Default page title
-title: JBoss Community
+title: Narayana
 
 # Project id name
-project: example
+project: narayana
 
 # Project full name
-project_name: Example
+project_name: Narayana
 
 # Default minify settings
 css_minifier: disabled
@@ -59,6 +59,8 @@ wget:
     - http://static.jboss.org/theme/fonts/titilliumtext/
     - http://static.jboss.org/theme/fonts/font-awesome/
     - http://static.jboss.org/theme/images/common/
+    # TODO
+    # - http://static.jboss.org/narayana/
     - http://static.jboss.org/example/
 
 # Update resource URLs based on the profile
@@ -67,7 +69,9 @@ profiles:
     jborg_fonts_url: /cache/static.jboss.org/theme/fonts
     jborg_images_url: /cache/static.jboss.org/theme/images
     jborg_js_url: /cache/static.jboss.org/theme/js
-    project_images_url: /cache/static.jboss.org/example/images
+    # TODO
+    # project_images_url: /cache/static.jboss.org/narayana/images
+    project_images_url: /cache/images
     bootstrap_css_url: /stylesheets-source/_bootstrap-community
     bootstrap_js_url: /javascripts/bootstrap-community
     symlinker:
@@ -77,12 +81,15 @@ profiles:
     jborg_fonts_url: http://static.jboss.org/theme/fonts
     jborg_images_url: http://static.jboss.org/theme/images
     jborg_js_url: http://static.jboss.org/theme/js
+    # TODO
+    # project_images_url: http://static.jboss.org/narayana/images
     project_images_url: http://static.jboss.org/example/images
     bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
     bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
-    base_url: http://example-stg.jboss.org
+    base_url: http://narayana.io/staging
     wget:
       enabled: false
+    # TODO
     # Uncomment the line below and provide a valid Google Analytics ID to enable tracking of your site in this profile.
     # google_analytics: UA-00000000-0
   production:
@@ -93,11 +100,14 @@ profiles:
     jborg_fonts_url: http://static.jboss.org/theme/fonts
     jborg_images_url: http://static.jboss.org/theme/images
     jborg_js_url: http://static.jboss.org/theme/js
+    # TODO
+    # project_images_url: http://static.jboss.org/narayana/images
     project_images_url: http://static.jboss.org/example/images
     bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
     bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
-    base_url: http://example.jboss.org
+    base_url: http://narayana.io
     wget:
       enabled: false
+    # TODO
     # Uncomment the line below and provide a valid Google Analytics ID to enable tracking of your site in this profile.
     # google_analytics: UA-00000000-0
