Main documentation page

--- a/_config/links.yml
+++ b/_config/links.yml
@@ -49,6 +49,43 @@ books:
     link: "http://www.amazon.com/exec/obidos/tg/detail/-/0131401602"
 
 # Related articles
+articles:
+  - name: "Why you should consider using transactions in your development projects"
+    publisher: "Mark Little's Blog, Java.net"
+    date: "March 2. 2006"
+    link: "http://weblogs.java.net/blog/marklittle/archive/2006/03/transactions_ar_1.html"
+  - name: "Transactions and recoverability: what they mean to your applications"
+    publisher: "Mark Little's Blog, Java.net"
+    date: "May 11, 2005"
+    link: "http://weblogs.java.net/blog/marklittle/archive/2005/05/transactions_an.html"
+  - name: "Introducing WS-Coordination"
+    publisher: "Web Services Journal"
+    date: "April 2003"
+    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=542"
+  - name: "Introducing WS-Transaction, Part 1"
+    publisher: "Web Services Journal"
+    date: "May 2003"
+    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=561"
+  - name: "Introducing WS-Transaction, Part 2"
+    publisher: "Web Services Journal"
+    date: "June 2003"
+    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=587"
+  - name: "A paper about OASIS WS-CAF"
+    publisher: "ICDCS"
+    date: "2005"
+    link: "http://narayana.jboss.org/dms/jbosstm/resources/papers/ICDCS2005.pdf"
 
 # Related whitepapers
-
+whitepapers:
+  - name: "Introducing BPEL4WS"
+    publisher: "Web Services Journal"
+    date: "June 2003"
+    link: "http://www.arjuna.com/library/reports/2003-06-BPEL4WS-intro.pdf"
+  - name: "JTA and JTS Transactions"
+    publisher: "TechMetrix Research"
+    date: "2001"
+    link: "http://narayana.jboss.org/dms/jbosstm/resources/whitepapers/WPTotal-e-Transactions.pdf"
+  - name: "What is the XML Transaction Service"
+    publisher: "JBoss"
+    date: ""
+    link: "http://narayana.jboss.org/dms/jbosstm/resources/whitepapers/WhatIsXTS.pdf"
