--- a/_config/site.yml
+++ b/_config/site.yml
@@ -79,9 +79,7 @@ profiles:
     jborg_fonts_url: http://static.jboss.org/theme/fonts
     jborg_images_url: http://static.jboss.org/theme/images
     jborg_js_url: http://static.jboss.org/theme/js
-    # TODO
-    # project_images_url: http://static.jboss.org/narayana/images
-    project_images_url: http://static.jboss.org/example/images
+    project_images_url: /images
     bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
     bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
     base_url: http://narayana.io/staging
@@ -98,9 +96,7 @@ profiles:
     jborg_fonts_url: http://static.jboss.org/theme/fonts
     jborg_images_url: http://static.jboss.org/theme/images
     jborg_js_url: http://static.jboss.org/theme/js
-    # TODO
-    # project_images_url: http://static.jboss.org/narayana/images
-    project_images_url: http://static.jboss.org/example/images
+    project_images_url: /images
     bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
     bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
     base_url: http://jbosstm.github.io
