--- a/_config/site.yml
+++ b/_config/site.yml
@@ -43,7 +43,7 @@ profiles:
     project_images_url: /images
     bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
     bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
-    base_url: http://jbosstm.github.io
+    base_url: http://narayana.io
     # TODO
     # Uncomment the line below and provide a valid Google Analytics ID to enable tracking of your site in this profile.
     # google_analytics: UA-00000000-0
