--- a/_config/other_releases.yml
+++ b/_config/other_releases.yml
@@ -1,23 +1,11 @@
 blacktie:
-  version: 5.0.2.Final
-  date: 2014-06-02
-  windows: http://www.jboss.org/jbosstm/downloads/5.0.2.Final/binary/blacktie-5.0.2.Final-vc9x32-bin.zip
-  linux: http://www.jboss.org/jbosstm/downloads/5.0.2.Final/binary/blacktie-5.0.2.Final-fc18x64-bin.tar.gz
-
-blacktie-other:
-  - version: 5.0.0.Final
-    date: 2014-01-23
-    windows: http://www.jboss.org/jbosstm/downloads/5.0.0.Final/binary/blacktie-5.0.0.Final-vc9x32-bin.zip
-    linux: http://www.jboss.org/jbosstm/downloads/5.0.0.Final/binary/blacktie-5.0.0.Final-centos54x64-bin.tar.gz
+  version: 5.0.4.Final
+  date: 2014-12-11
+  windows: http://www.jboss.org/jbosstm/downloads/5.0.4.Final/binary/blacktie-5.0.4.Final-vc9x32-bin.zip
+  linux: http://www.jboss.org/jbosstm/downloads/5.0.4.Final/binary/blacktie-5.0.4.Final-centos54x64-bin.tar
 
 nta:
   version: 1.0.0.Alpha2
   date: 2014-04-01
   binary: http://download.jboss.org/jbosstm/nta/1.0.0.Alpha2/binary/nta-1.0.0.Alpha2.ear
   demo: http://download.jboss.org/jbosstm/nta/1.0.0.Alpha2/binary/nta-demo-1.0.0.Alpha2.war
-
-nta-other:
-  - version: 1.0.0.Alpha1
-    date: 2014-01-06
-    binary: http://www.jboss.org/jbosstm/downloads/nta/1.0.0.Alpha1/binary/nta-full.ear
-    demo: http://www.jboss.org/jbosstm/downloads/nta/1.0.0.Alpha1/binary/demo.war
