--- a/_config/other_releases.yml
+++ b/_config/other_releases.yml
@@ -1,7 +1,7 @@
 blacktie:
   version: 5.0.4.Final
   date: 2014-12-11
-  windows: http://www.jboss.org/jbosstm/downloads/5.0.4.Final/binary/blacktie-5.0.4.Final-vc9x32-bin.zip
+  windows: http://www.jboss.org/jbosstm/downloads/5.0.4.Final/binary/blacktie-5.0.4.Final-vc9x32-bin-3.zip
   linux: http://www.jboss.org/jbosstm/downloads/5.0.4.Final/binary/blacktie-5.0.4.Final-centos54x64-bin.tar.gz
 
 nta:
