--- a/_config/current_narayana_release.yml
+++ b/_config/current_narayana_release.yml
@@ -2,3 +2,7 @@ version: 5.1.0.Final
 date: 2015-04-27
 binary: http://www.jboss.org/jbosstm/downloads/5.1.0.Final/binary/narayana-full-5.1.0.Final-bin.zip
 source: http://www.jboss.org/jbosstm/downloads/5.1.0.Final/src/narayana-full-5.1.0.Final-src.zip
+
+blacktie:
+  windows: http://www.jboss.org/jbosstm/downloads/5.1.0.Final/binary/blacktie-5.1.0.Final-vc9x32-bin.zip
+  linux: http://www.jboss.org/jbosstm/downloads/5.1.0.Final/binary/blacktie-5.1.0.Final-centos54x64-bin.tar.gz
