--- a/_config/current_narayana_api.yml
+++ b/_config/current_narayana_api.yml
@@ -1,2 +1,2 @@
 view: /docs/api/index.html
-download: http://www.jboss.org/jbosstm/downloads/5.1.1.Final/api/narayana-full-5.1.1.Final-javadoc.jar
+download: http://download.jboss.org/jbosstm/downloads/5.1.1.Final/api/narayana-full-5.1.1.Final-javadoc.jar
