--- a/_config/current_narayana_api.yml
+++ b/_config/current_narayana_api.yml
@@ -1,2 +1,4 @@
 view: /docs/api/index.html
+viewblacktie: /docs/jatmibroker-xatmi-api/index.html
+viewblacktienbf: /docs/jatmibroker-nbf-api/index.html
 download: http://www.jboss.org/jbosstm/downloads/5.2.6.Final/api/narayana-full-5.2.6.Final-javadoc.jar
