Moved from the old Magnolia system

--- a/_config/links.yml
+++ b/_config/links.yml
@@ -3,27 +3,27 @@ specs:
   - name: "WS-Coordination"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-Coordination.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-Coordination.pdf"
   - name: "WS-AtomicTransaction"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-AtomicTransaction.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-AtomicTransaction.pdf"
   - name: "WS-BusinessActivity"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-BusinessActivity.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-BusinessActivity.pdf"
   - name: "Web Services Context (WS-CTX)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-CTX.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CTX.pdf"
   - name: "Web Services Coordination Framework (WS-CF)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-CF.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CF.pdf"
   - name: "Web Services Transaction Management (WS-TXM)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://www.jboss.org/dms/jbosstm/resources/standards/WS-TXM.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-TXM.pdf"
   - name: "Narayana Server Integration Guide"
     version: "4.14.0"
     date: "2010"
@@ -77,7 +77,7 @@ articles:
   - name: "A paper about OASIS WS-CAF"
     publisher: "ICDCS"
     date: "2005"
-    link: "http://www.jboss.org/dms/jbosstm/resources/papers/ICDCS2005.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ICDCS2005.pdf"
 
 # Related whitepapers
 whitepapers:
@@ -88,8 +88,8 @@ whitepapers:
   - name: "JTA and JTS Transactions"
     publisher: "TechMetrix Research"
     date: "2001"
-    link: "http://www.jboss.org/dms/jbosstm/resources/whitepapers/WPTotal-e-Transactions.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WPTotal-e-Transactions.pdf"
   - name: "What is the XML Transaction Service"
     publisher: "JBoss"
     date: ""
-    link: "http://www.jboss.org/dms/jbosstm/resources/whitepapers/WhatIsXTS.pdf"
+    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WhatIsXTS.pdf"
