--- a/_config/links.yml
+++ b/_config/links.yml
@@ -3,27 +3,27 @@ specs:
   - name: "WS-Coordination"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-Coordination.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-Coordination.pdf"
   - name: "WS-AtomicTransaction"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-AtomicTransaction.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-AtomicTransaction.pdf"
   - name: "WS-BusinessActivity"
     version: "1.0"
     date: "Aug 2005"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-BusinessActivity.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-BusinessActivity.pdf"
   - name: "Web Services Context (WS-CTX)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CTX.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CTX.pdf"
   - name: "Web Services Coordination Framework (WS-CF)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CF.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-CF.pdf"
   - name: "Web Services Transaction Management (WS-TXM)"
     version: "1.0"
     date: "Jul 2003"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-TXM.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/standards/WS-TXM.pdf"
   - name: "Narayana Server Integration Guide"
     version: "4.14.0"
     date: "2010"
@@ -46,50 +46,50 @@ books:
   - name: "Java Transaction Processing: Design and Implementation"
     author: "Mark Little, Jon Maron and Greg Pavlik"
     date: "2004"
-    link: "http://www.amazon.com/exec/obidos/tg/detail/-/013035290X"
+    link: "https://www.amazon.com/exec/obidos/tg/detail/-/013035290X"
   - name: "Developing Enterprise Web Services: An Architect's Guide"
     author: "Sandeep Chatterjee and James Webber"
     date: "2003"
-    link: "http://www.amazon.com/exec/obidos/tg/detail/-/0131401602"
+    link: "https://www.amazon.com/exec/obidos/tg/detail/-/0131401602"
 
 # Related articles
 articles:
   - name: "Why you should consider using transactions in your development projects"
     publisher: "Mark Little's Blog, Java.net"
     date: "March 2. 2006"
-    link: "http://weblogs.java.net/blog/marklittle/archive/2006/03/transactions_ar_1.html"
+    link: "https://weblogs.java.net/blog/marklittle/archive/2006/03/transactions_ar_1.html"
   - name: "Transactions and recoverability: what they mean to your applications"
     publisher: "Mark Little's Blog, Java.net"
     date: "May 11, 2005"
-    link: "http://weblogs.java.net/blog/marklittle/archive/2005/05/transactions_an.html"
+    link: "https://weblogs.java.net/blog/marklittle/archive/2005/05/transactions_an.html"
   - name: "Introducing WS-Coordination"
     publisher: "Web Services Journal"
     date: "April 2003"
-    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=542"
+    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=542"
   - name: "Introducing WS-Transaction, Part 1"
     publisher: "Web Services Journal"
     date: "May 2003"
-    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=561"
+    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=561"
   - name: "Introducing WS-Transaction, Part 2"
     publisher: "Web Services Journal"
     date: "June 2003"
-    link: "http://www.sys-con.com/webservices/articleprint.cfm?id=587"
+    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=587"
   - name: "A paper about OASIS WS-CAF"
     publisher: "ICDCS"
     date: "2005"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ICDCS2005.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/papers/ICDCS2005.pdf"
 
 # Related whitepapers
 whitepapers:
   - name: "Introducing BPEL4WS"
     publisher: "Web Services Journal"
     date: "June 2003"
-    link: "http://www.arjuna.com/library/reports/2003-06-BPEL4WS-intro.pdf"
+    link: "https://www.arjuna.com/library/reports/2003-06-BPEL4WS-intro.pdf"
   - name: "JTA and JTS Transactions"
     publisher: "TechMetrix Research"
     date: "2001"
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WPTotal-e-Transactions.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WPTotal-e-Transactions.pdf"
   - name: "What is the XML Transaction Service"
     publisher: "JBoss"
     date: ""
-    link: "http://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WhatIsXTS.pdf"
+    link: "https://downloads.jboss.org/jbosstm/dms/jbosstm/resources/whitepapers/WhatIsXTS.pdf"
