--- a/_config/site.yml
+++ b/_config/site.yml
@@ -15,32 +15,32 @@ html_minifier: disabled
 # Update resource URLs based on the profile
 profiles:
   development:
-    jborg_fonts_url: http://static.jboss.org/theme/fonts
-    jborg_images_url: http://static.jboss.org/theme/images
-    jborg_js_url: http://static.jboss.org/theme/js
+    jborg_fonts_url: https://static.jboss.org/theme/fonts
+    jborg_images_url: https://static.jboss.org/theme/images
+    jborg_js_url: https://static.jboss.org/theme/js
     project_images_url: /images
-    bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
-    bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
+    bootstrap_css_url: https://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
+    bootstrap_js_url: https://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
   staging:
-    jborg_fonts_url: http://static.jboss.org/theme/fonts
-    jborg_images_url: http://static.jboss.org/theme/images
-    jborg_js_url: http://static.jboss.org/theme/js
+    jborg_fonts_url: https://static.jboss.org/theme/fonts
+    jborg_images_url: https://static.jboss.org/theme/images
+    jborg_js_url: https://static.jboss.org/theme/js
     project_images_url: /images
-    bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
-    bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
-    base_url: http://narayana.io/staging
+    bootstrap_css_url: https://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
+    bootstrap_js_url: https://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
+    base_url: https://narayana.io/staging
   production:
     minified: .min
     css_minifier: enabled
     js_minifier: enabled
     html_minifier: enabled
-    jborg_fonts_url: http://static.jboss.org/theme/fonts
-    jborg_images_url: http://static.jboss.org/theme/images
-    jborg_js_url: http://static.jboss.org/theme/js
+    jborg_fonts_url: https://static.jboss.org/theme/fonts
+    jborg_images_url: https://static.jboss.org/theme/images
+    jborg_js_url: https://static.jboss.org/theme/js
     project_images_url: /images
-    bootstrap_css_url: http://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
-    bootstrap_js_url: http://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
-    base_url: http://narayana.io
+    bootstrap_css_url: https://static.jboss.org/theme/css/bootstrap-community/3.2.0.0/bootstrap-community
+    bootstrap_js_url: https://static.jboss.org/theme/js/libs/bootstrap-community/3.2.0.0/bootstrap-community
+    base_url: https://narayana.io
     deploy:
       host: github_pages
       branch: master
