JBTM-3588 Jakarta Migration of the website

--- a/_config/features_comparison.yml
+++ b/_config/features_comparison.yml
@@ -44,7 +44,7 @@ features:
     stm: true
     arjuna: true
     txoj: true
-  - name: "JTA 1.2 API"
+  - name: "Jakarta Transactions API"
     jta: true
     jts: true
     xts: true
