Some links are not available anymore (404)
404 pages:
  https://www.sys-con.com/webservices/articleprint.cfm?id=542
  https://www.sys-con.com/webservices/articleprint.cfm?id=561
sys-con.com links point to the same twitter profile (cloudexpo), do we have more updated articles?

updated links using web.archive.org

--- a/_config/links.yml
+++ b/_config/links.yml
@@ -57,23 +57,23 @@ articles:
   - name: "Why you should consider using transactions in your development projects"
     publisher: "Mark Little's Blog, Java.net"
     date: "March 2. 2006"
-    link: "https://weblogs.java.net/blog/marklittle/archive/2006/03/transactions_ar_1.html"
+    link: "https://web.archive.org/web/20060420043156/https://weblogs.java.net/blog/marklittle/archive/2006/03/transactions_ar_1.html"
   - name: "Transactions and recoverability: what they mean to your applications"
     publisher: "Mark Little's Blog, Java.net"
     date: "May 11, 2005"
-    link: "https://weblogs.java.net/blog/marklittle/archive/2005/05/transactions_an.html"
+    link: "https://web.archive.org/web/20051027235959/https://weblogs.java.net/blog/marklittle/archive/2005/05/transactions_an.html"
   - name: "Introducing WS-Coordination"
     publisher: "Web Services Journal"
     date: "April 2003"
-    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=542"
+    link: "https://web.archive.org/web/20030515121609/https://www.sys-con.com/webservices/articleprint.cfm?id=542"
   - name: "Introducing WS-Transaction, Part 1"
     publisher: "Web Services Journal"
     date: "May 2003"
-    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=561"
+    link: "https://web.archive.org/web/20030515121609/https://www.sys-con.com/webservices/articleprint.cfm?id=561"
   - name: "Introducing WS-Transaction, Part 2"
     publisher: "Web Services Journal"
     date: "June 2003"
-    link: "https://www.sys-con.com/webservices/articleprint.cfm?id=587"
+    link: "https://web.archive.org/web/20030515121609/https://www.sys-con.com/webservices/articleprint.cfm?id=587"
   - name: "A paper about OASIS WS-CAF"
     publisher: "ICDCS"
     date: "2005"
