--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches:
       - develop
+  pull_request:
+    branches:
+      - develop
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
