Use relative URLs

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,4 @@
-canonifyURLs = true
-baseURL = "https://www.narayana.io/"
+relativeURLs = true
 disableAliases = true
 disableHugoGeneratorInject = true
 enableEmoji = true
