--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -2,46 +2,46 @@
   name = "Prologue"
   weight = 10
   identifier = "prologue"
-  url = "/docs/prologue/"
+  pageRef = "/docs/prologue/"
 
 [[docs]]
   name = "Help"
   weight = 60
   identifier = "help"
-  url = "/docs/help/"
+  pageRef = "/docs/help/"
 
 # [[docs]]
 #   name = "Lorem"
 #   weight = 70
 #   identifier = "lorem"
-#   url = "/docs/lorem/"
+#   pageRef = "/docs/lorem/"
 
 [[guide]]
   name = "Lorem"
   weight = 10
   identifier = "lorem"
-  url = "/guide/lorem/"
+  pageRef = "/guide/lorem/"
 
 [[tutorial]]
   name = "Lorem"
   weight = 10
   identifier = "lorem"
-  url = "/tutorial/lorem/"
+  pageRef = "/tutorial/lorem/"
 
 [[main]]
   name = "Documentation"
-  url = "/documentation/"
-# url = "/docs/1.0/prologue/introduction/"
+  pageRef = "/documentation/"
+# pageRef = "/docs/1.0/prologue/introduction/"
   weight = 20
 
 # [[main]]
 #   name = "Tutorial"
-#   url = "/tutorial/lorem/ipsum/"
+#   pageRef = "/tutorial/lorem/ipsum/"
 #   weight = 15
 
 [[main]]
   name = "Downloads"
-  url = "/downloads/"
+  pageRef = "/downloads/"
   weight = 10
 
 
@@ -49,25 +49,29 @@
   name = "Community"
   weight = 40
   identifier = "community"
-  url = "/community/"
+  pageRef = "/community/"
 
 [[main]]
   name = "Source Code"
   weight = 50
   identifier = "github"
-  url= "https://github.com/jbosstm"
+  url = "https://github.com/jbosstm"
+  [main.params]
+      rel = 'external'
 
 [[main]]
   name = "Issue Tracker"
   weight = 60
   identifier = "issuetracker"
   url = "https://issues.redhat.com/projects/JBTM/issues"
+  [main.params]
+      rel = 'external'
 
 [[main]]
   name = "Certifications"
   weight = 70
   identifier = "certifications"
-  url = "/certifications/"
+  pageRef = "/certifications/"
 
 [[social]]
   name = "GitHub"
@@ -75,15 +79,19 @@
   url = "https://github.com/jbosstm"
   post = "v0.1.0"
   weight = 10
+  [social.params]
+      rel = 'external'
 
 [[social]]
   name = "Twitter"
   pre = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" fill=\"none\" stroke=\"currentColor\" stroke-width=\"2\" stroke-linecap=\"round\" stroke-linejoin=\"round\" class=\"feather feather-twitter\"><path d=\"M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z\"></path></svg>"
   url = "https://twitter.com/narayana_io"
   weight = 20
+  [social.params]
+      rel = 'external'
 
 
 # [[footer]]
 #   name = "Privacy"
-#   url = "/privacy-policy/"
+#   pageRef = "/privacy-policy/"
 #   weight = 10
